Wed May  7 11:25:41 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_f_local_variables): exclude variables hidden by
	  shadowing.  [ruby-core:60501] [Bug #9486]

	* vm.c (collect_local_variables_in_iseq): ditto.

Tue May  6 23:29:05 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (new_bv_gen): no duplicated names, if already added in
	  shadowing_lvar().

	* parse.y (local_tbl_gen): remove local variables duplicated with
	  arguments.
	  [ruby-core:60501] [Bug #9486]

Tue May  6 18:48:50 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Adjust the time zone of "now".

Tue May  6 18:33:12 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* io.c (io_{read,write}_nonblock): use rb_get_kwargs instead of
	  rb_hash_aref.

Tue May  6 18:03:05 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Argument validation code moved from
	  Time.parse and Time.strptime.

Tue May  6 17:27:06 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.parse): [DOC] Fix an example in the documentation
	  to use EST.
	  Reported by Marcus Stollsteimer.
	  [ruby-core:60778] [Bug #9521] and [ruby-core:61718] [Bug #9682]

Tue May  6 04:31:48 2014  Tadayoshi Funaba  <tadf@dotrb.org>

	* file.c (rb_f_test): removed meaningless "case 'a'".

Tue May  6 01:28:14 2014  Tanaka Akira  <akr@fsij.org>

	* lib/open-uri.rb (OpenURI.open_uri): Call StringIO#close only if
	  the StringIO object is not closed yet.
	  Reported by Jordi Massaguer Pla.  [ruby-core:42538] [Bug #6010]

Tue May  6 01:08:01 2014  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: define File::NULL if not defined and /dev/null
	  is available to run benchmark driver on ruby 1.9.2.

Mon May  5 23:53:24 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: Add IP_TRANSPARENT.
	  IP_TRANSPARENT is provieded since glibc-2.12.
	  Reported by Eliezer Croitoru.  [ruby-core:50372] [Bug #7476]

Mon May  5 22:29:47 2014  Tanaka Akira  <akr@fsij.org>
